cmake tweaks. add openal support. this project file sucks

--- a/iff/CMakeLists.txt
+++ b/iff/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_sources(SOURCE_GROUP "ChocolateDescent\\\\iff"
-    "${METADATA_BASE_PATH}iff/iff.cpp"
-    "${METADATA_BASE_PATH}iff/iff.h"
+    "${METADATA_BASE_PATH}/iff/iff.cpp"
+    "${METADATA_BASE_PATH}/iff/iff.h"
 )
