--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -1,27 +1,27 @@
 add_sources(SOURCE_GROUP "ChocolateDescent\\\\ui"
-    "${METADATA_BASE_PATH}ui/barbox.cpp"
-    "${METADATA_BASE_PATH}ui/button.cpp"
-    "${METADATA_BASE_PATH}ui/checkbox.cpp"
-    "${METADATA_BASE_PATH}ui/file.cpp"
-    "${METADATA_BASE_PATH}ui/func.cpp"
-    "${METADATA_BASE_PATH}ui/func.h"
-    "${METADATA_BASE_PATH}ui/gadget.cpp"
-    "${METADATA_BASE_PATH}ui/icon.cpp"
-    "${METADATA_BASE_PATH}ui/inputbox.cpp"
-    "${METADATA_BASE_PATH}ui/keypad.cpp"
-    "${METADATA_BASE_PATH}ui/keypress.cpp"
-    "${METADATA_BASE_PATH}ui/keytrap.cpp"
-    "${METADATA_BASE_PATH}ui/listbox.cpp"
-    "${METADATA_BASE_PATH}ui/menubar.cpp"
-    "${METADATA_BASE_PATH}ui/message.cpp"
-    "${METADATA_BASE_PATH}ui/popup.cpp"
-    "${METADATA_BASE_PATH}ui/radio.cpp"
-    "${METADATA_BASE_PATH}ui/scroll.cpp"
-    "${METADATA_BASE_PATH}ui/ui.cpp"
-    "${METADATA_BASE_PATH}ui/ui.h"
-    "${METADATA_BASE_PATH}ui/uidraw.cpp"
-    "${METADATA_BASE_PATH}ui/uimenu.cpp"
-    "${METADATA_BASE_PATH}ui/uimouse.cpp"
-    "${METADATA_BASE_PATH}ui/userbox.cpp"
-    "${METADATA_BASE_PATH}ui/window.cpp"
+    "${METADATA_BASE_PATH}/ui/barbox.cpp"
+    "${METADATA_BASE_PATH}/ui/button.cpp"
+    "${METADATA_BASE_PATH}/ui/checkbox.cpp"
+    "${METADATA_BASE_PATH}/ui/file.cpp"
+    "${METADATA_BASE_PATH}/ui/func.cpp"
+    "${METADATA_BASE_PATH}/ui/func.h"
+    "${METADATA_BASE_PATH}/ui/gadget.cpp"
+    "${METADATA_BASE_PATH}/ui/icon.cpp"
+    "${METADATA_BASE_PATH}/ui/inputbox.cpp"
+    "${METADATA_BASE_PATH}/ui/keypad.cpp"
+    "${METADATA_BASE_PATH}/ui/keypress.cpp"
+    "${METADATA_BASE_PATH}/ui/keytrap.cpp"
+    "${METADATA_BASE_PATH}/ui/listbox.cpp"
+    "${METADATA_BASE_PATH}/ui/menubar.cpp"
+    "${METADATA_BASE_PATH}/ui/message.cpp"
+    "${METADATA_BASE_PATH}/ui/popup.cpp"
+    "${METADATA_BASE_PATH}/ui/radio.cpp"
+    "${METADATA_BASE_PATH}/ui/scroll.cpp"
+    "${METADATA_BASE_PATH}/ui/ui.cpp"
+    "${METADATA_BASE_PATH}/ui/ui.h"
+    "${METADATA_BASE_PATH}/ui/uidraw.cpp"
+    "${METADATA_BASE_PATH}/ui/uimenu.cpp"
+    "${METADATA_BASE_PATH}/ui/uimouse.cpp"
+    "${METADATA_BASE_PATH}/ui/userbox.cpp"
+    "${METADATA_BASE_PATH}/ui/window.cpp"
 )
