--- a/vecmat/CMakeLists.txt
+++ b/vecmat/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_sources(SOURCE_GROUP "ChocolateDescent\\\\vecmat"
-    "${METADATA_BASE_PATH}vecmat/vecmat.cpp"
-    "${METADATA_BASE_PATH}vecmat/vecmat.h"
+    "${METADATA_BASE_PATH}/vecmat/vecmat.cpp"
+    "${METADATA_BASE_PATH}/vecmat/vecmat.h"
 )
