--- a/fix/CMakeLists.txt
+++ b/fix/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_sources(SOURCE_GROUP "ChocolateDescent\\\\fix"
-    "${METADATA_BASE_PATH}fix/fix.cpp"
-    "${METADATA_BASE_PATH}fix/fix.h"
-    "${METADATA_BASE_PATH}fix/tables.cpp"
+    "${METADATA_BASE_PATH}/fix/fix.cpp"
+    "${METADATA_BASE_PATH}/fix/fix.h"
+    "${METADATA_BASE_PATH}/fix/tables.cpp"
 )
