start integration of d2x's mvelib so we can look at some pretty fmvs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ add_subdirectory(main_d1)
 add_subdirectory(main_d2)
 add_subdirectory(mem)
 add_subdirectory(misc)
+add_subdirectory(mve)
 add_subdirectory(platform)
 add_subdirectory(texmap)
 add_subdirectory(ui)
@@ -102,6 +103,7 @@ source_group("main_d1" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/main_d1/.+")
 source_group("main_d2" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/main_d2/.+")
 source_group("mem" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/mem/.+")
 source_group("misc" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/misc/.+")
+source_group("mve" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/mve/.+")
 source_group("platform" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/platform/.+")
 source_group("platform\\fluidsynth" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/platform/fluidsynth/.+")
 source_group("platform\\openal" REGULAR_EXPRESSION "${METADATA_BASE_PATH}/platform/openal/.+")
