Revise native sound system to enable MIDI music support, and revise midi code to be flexible in output sample rate and number of samples executed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -508,6 +508,7 @@ set(SDL_SOURCES
 
 set(OPENAL_SOURCES
 	platform/openal/al_sound.cpp
+	platform/openal/al_player.cpp
 )
 
 set(FLUIDSYNTH_SOURCES
