Gut original SDL screen code for GL screen code.
Should perform faster since there's less copies CPU-side and the 32-bit screen conversion now happens on the GPU. Needs a pass for linux compatibility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -513,6 +513,8 @@ set(SDL_SOURCES
 	platform/sdl/key_sdl.cpp
 	platform/sdl/mouse_sdl.cpp
     platform/sdl/joy_sdl.cpp
+	platform/sdl/gl_sdl.cpp
+	platform/sdl/gl_sdl.h
 )
 
 set(OPENAL_SOURCES
