Rework midi code for hardsynth playback. However, I haven't worked out a sufficient buffering scheme for the native backend yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -512,6 +512,7 @@ set(SDL_SOURCES
 set(OPENAL_SOURCES
 	platform/openal/al_sound.cpp
 	platform/openal/al_player.cpp
+	platform/openal/al_midi.h
 )
 
 set(FLUIDSYNTH_SOURCES
