Migrated to platform-agnostic define

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -671,7 +671,10 @@ if (APPLE)
 		add_custom_command(TARGET ChocolateDescent POST_BUILD COMMAND /bin/zsh -c "/usr/local/bin/dylibbundler -od -b -x ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent.app/Contents/MacOS/ChocolateDescent -d ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent.app/Contents/libs")
 		add_custom_command(TARGET ChocolateDescent2 POST_BUILD COMMAND /bin/zsh -c "/usr/local/bin/dylibbundler -od -b -x ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent2.app/Contents/MacOS/ChocolateDescent2 -d ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent2.app/Contents/libs")
 	endif()
-else()
+elseif(UNIX)
+	add_executable(ChocolateDescent UNIX ${SHARED_SOURCES} ${NOT_COMPILED_SOURCES} ${DESCENT1_SOURCES})
+	add_executable(ChocolateDescent2 UNIX ${SHARED_SOURCES} ${NOT_COMPILED_SOURCES} ${DESCENT2_SOURCES})
+elseif(WIN32)
 	add_executable(ChocolateDescent WIN32 ${SHARED_SOURCES} ${NOT_COMPILED_SOURCES} ${DESCENT1_SOURCES})
 	add_executable(ChocolateDescent2 WIN32 ${SHARED_SOURCES} ${NOT_COMPILED_SOURCES} ${DESCENT2_SOURCES})
 endif()
