Update dylibbundler call for directories with spaces in them

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -668,8 +668,8 @@ if (APPLE)
 	set_target_properties(ChocolateDescent PROPERTIES MACOSX_BUNDLE_BUNDLE_VERSION "Chocolate Descent v${CHOCOLATE_DESCENT_VERSION}")
 	set_target_properties(ChocolateDescent2 PROPERTIES MACOSX_BUNDLE_BUNDLE_VERSION "Chocolate Descent 2 v${CHOCOLATE_DESCENT_VERSION}")
 	if(EXISTS "/usr/local/bin/dylibbundler")
-		add_custom_command(TARGET ChocolateDescent POST_BUILD COMMAND /bin/zsh -c "/usr/local/bin/dylibbundler -od -b -x ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent.app/Contents/MacOS/ChocolateDescent -d ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent.app/Contents/libs")
-		add_custom_command(TARGET ChocolateDescent2 POST_BUILD COMMAND /bin/zsh -c "/usr/local/bin/dylibbundler -od -b -x ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent2.app/Contents/MacOS/ChocolateDescent2 -d ${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent2.app/Contents/libs")
+		add_custom_command(TARGET ChocolateDescent POST_BUILD COMMAND /bin/zsh -c "/usr/local/bin/dylibbundler -od -b -x \"${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent.app/Contents/MacOS/ChocolateDescent\" -d \"${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent.app/Contents/libs\"")
+		add_custom_command(TARGET ChocolateDescent2 POST_BUILD COMMAND /bin/zsh -c "/usr/local/bin/dylibbundler -od -b -x \"${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent2.app/Contents/MacOS/ChocolateDescent2\" -d \"${CMAKE_CURRENT_SOURCE_DIR}/ChocolateDescent2.app/Contents/libs\"")
 	endif()
 elseif(UNIX)
 	add_executable(ChocolateDescent UNIX ${SHARED_SOURCES} ${NOT_COMPILED_SOURCES} ${DESCENT1_SOURCES})
