Make mingw cmake build work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -640,8 +640,11 @@ if (SDL2_FOUND)
 	add_definitions(-DUSE_SDL)
 	include_directories(${SDL2_INCLUDE_DIRS})
 	set(SHARED_SOURCES ${SHARED_SOURCES} ${SDL_SOURCES})
+	if (MINGW)
+		set(SHARED_LIBS ${SHARED_LIBS} "mingw32")
+	endif()
+	set(SHARED_LIBS ${SHARED_LIBS} ${SDL2_MAIN_LIBRARIES})
 	set(SHARED_LIBS ${SHARED_LIBS} ${SDL2_LIBRARIES})
-    set(SHARED_LIBS ${SHARED_LIBS} ${SDL2_MAIN_LIBRARIES})
 else()
 	set(NOT_COMPILED_SOURCES ${NOT_COMPILED_SOURCES} ${SDL_SOURCES})
 endif()
@@ -695,6 +698,7 @@ if (WIN32)
 	add_definitions(-DWIN32 -D_WIN32)
     set(SHARED_SOURCES ${SHARED_SOURCES} ${WIN32_SOURCES})
 	set(NOT_COMPILED_SOURCES ${NOT_COMPILED_SOURCES} ${UNIX_SOURCES})
+	set(SHARED_LIBS ${SHARED_LIBS} "winmm")
 elseif(UNIX)
 	add_definitions(-DUNIX -D_UNIX)
 	add_link_options(-pthread)
