Tweak stb_vorbis to compile as C, since there's otherwise weird issues in VS 2022

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ set(SHARED_SOURCES
 	misc/parsarg.h
     misc/rand.h
     misc/rand.cpp
-	misc/stb_vorbis.h
+	misc/stb_vorbis.c
 	misc/types.h
 	platform/disk.h
 	platform/findfile.h
